--- a/Movie_Recommendation_System.ipynb
+++ b/Movie_Recommendation_System.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 69,
    "id": "add5fa0d",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 70,
    "id": "da9f4df8",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 71,
    "id": "cad762c4",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 72,
    "id": "682c681b",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 73,
    "id": "a7edc2e9",
    "metadata": {},
    "outputs": [],
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 74,
    "id": "d9815bd4",
    "metadata": {},
    "outputs": [],
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 75,
    "id": "180a40fb",
    "metadata": {},
    "outputs": [],
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 76,
    "id": "13090395",
    "metadata": {},
    "outputs": [],
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 77,
    "id": "4327b460",
    "metadata": {},
    "outputs": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 78,
    "id": "65189390",
    "metadata": {},
    "outputs": [],
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 79,
    "id": "c6075767",
    "metadata": {},
    "outputs": [],
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 80,
    "id": "3a3e6106",
    "metadata": {},
    "outputs": [],
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 81,
    "id": "418ccc9f",
    "metadata": {},
    "outputs": [],
@@ -351,7 +351,9 @@
     "    for uid, user_ratings in top_n.items():\n",
     "        user_ratings.sort(key=lambda x: x[1], reverse=True)\n",
     "        top_n[uid] = user_ratings[:n]\n",
-    "    return top_n"
+    "    return top_n\n",
+    "\n",
+    "top_n = get_top_n(predictions, n=5)"
    ]
   },
   {
@@ -364,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 82,
    "id": "4cc94f3e",
    "metadata": {},
    "outputs": [],
@@ -387,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 83,
    "id": "7dff1b3d",
    "metadata": {},
    "outputs": [
@@ -397,28 +399,28 @@
      "text": [
       "\n",
       "🎬 User 907 - Top 5 Recommendations (SVD):\n",
-      " item_id                           title\n",
-      "      79            Fugitive, The (1993)\n",
-      "     143      Sound of Music, The (1965)\n",
-      "     172 Empire Strikes Back, The (1980)\n",
-      "     647                      Ran (1985)\n",
-      "     813    Celluloid Closet, The (1995)\n",
+      " item_id                        title\n",
+      "      79         Fugitive, The (1993)\n",
+      "     143   Sound of Music, The (1965)\n",
+      "     173   Princess Bride, The (1987)\n",
+      "     647                   Ran (1985)\n",
+      "     813 Celluloid Closet, The (1995)\n",
       "\n",
       "🎬 User 371 - Top 5 Recommendations (SVD):\n",
       " item_id                                     title\n",
-      "      55                  Professional, The (1994)\n",
       "      97                 Dances with Wolves (1990)\n",
       "     186                Blues Brothers, The (1980)\n",
       "     210 Indiana Jones and the Last Crusade (1989)\n",
+      "     431                         Highlander (1986)\n",
       "     746                        Real Genius (1985)\n",
       "\n",
       "🎬 User 218 - Top 5 Recommendations (SVD):\n",
-      " item_id                      title\n",
-      "      12 Usual Suspects, The (1995)\n",
-      "      42              Clerks (1994)\n",
-      "     164          Abyss, The (1989)\n",
-      "     209  This Is Spinal Tap (1984)\n",
-      "     654           Chinatown (1974)\n",
+      " item_id                       title\n",
+      "      12  Usual Suspects, The (1995)\n",
+      "      42               Clerks (1994)\n",
+      "     209   This Is Spinal Tap (1984)\n",
+      "     654            Chinatown (1974)\n",
+      "     789 Swimming with Sharks (1995)\n",
       "\n",
       "🔍 Evaluated 940 users (SVD)\n",
       "🎯 Average Precision@5 (SVD): 0.9626\n"
