--- a/Movie_Recommendation_System.ipynb
+++ b/Movie_Recommendation_System.ipynb
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "id": "180a40fb",
    "metadata": {},
    "outputs": [],
@@ -166,7 +166,7 @@
     "\n",
     "    # return the top n recommended movie titles\n",
     "    top_items = recommendations.head(n_recommendations).index\n",
-    "    return movies.set_index(\"item_id\").loc[top_items][[\"title\"]] # return titles of the movies and not the id\n"
+    "    return movies.set_index(\"item_id\").loc[top_items][[\"title\"]] # return titles of the movies and not the id"
    ]
   },
   {
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "id": "4cc94f3e",
    "metadata": {},
    "outputs": [],
@@ -376,7 +376,7 @@
     "    if not actual:\n",
     "        return 0.0\n",
     "    predicted = [iid for iid, _ in recs[:k]]\n",
-    "    return len(set(actual) & set(predicted)) / k\n"
+    "    return len(set(actual) & set(predicted)) / k"
    ]
   },
   {
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "id": "7dff1b3d",
    "metadata": {},
    "outputs": [
@@ -428,7 +428,6 @@
     }
    ],
    "source": [
-    "## Evaluate Surprise model\n",
     "svd_precisions = []\n",
     "for uid, recs in top_n.items():\n",
     "    svd_precisions.append(precision_at_k_surprise(uid, recs, testset, k=5))\n",
